--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,10 @@ python:
 services:
   - docker
 
+before_install:
+  - python --version
+  - pip install -U pip
+
 install:
   - pip install -r requirements.txt
 
@@ -14,8 +18,15 @@ script:
   - docker build -t joffreybvn/snake-wars-server:latest .
 
 deploy:
-  provider: script
-  script:
-    docker push joffreybvn/snake-wars-server:latest;
-  on:
-    branch: master
+
+  - provider: script
+    script:
+      docker push joffreybvn/snake-wars-server:latest;
+    on:
+      branch: master
+
+  - provider: pypi
+    username: "__token__"
+    password: "$PYPI_TOKEN"
+    on:
+      branch: master
